--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,6 +6,18 @@
     margin-left: auto;
   margin-right: auto;
  }
+ .aboutApp
+ {
+  line-height: 18px; 
+  margin-bottom: 10px; 
+ }
+ .mynav
+ {
+  height: 40px; 
+  text-align: center;
+    margin-left: auto;
+  margin-right: auto;
+ }
  ul {
     list-style-type: none;
     margin: 0;
